Excluded Public Domain Base64 class from licensing

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ license {
     mapping {
         java = 'SLASHSTAR_STYLE'
     }
+    exclude 'com/hierynomus/protocol/commons/Base64.java'
 }
 
 release {
