--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ configurations.compile.transitive = false
 dependencies {
     compile "org.slf4j:slf4j-api:1.7.13"
     testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
+    testRuntime 'ch.qos.logback:logback-classic:1.1.3'
 }
 
 license {
