--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile "org.slf4j:slf4j-api:1.7.13"
     compile "org.bouncycastle:bcprov-jdk15on:$bouncycastleVersion"
     compile "org.bouncycastle:bcpkix-jdk15on:$bouncycastleVersion"
+    compile 'net.engio:mbassador:1.2.4.2'
     testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
     testCompile 'commons-io:commons-io:2.5'
     testRuntime 'ch.qos.logback:logback-classic:1.1.3'
