--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import java.text.SimpleDateFormat
+
 plugins {
   id "java"
   id "groovy"
@@ -108,7 +110,7 @@ project.tasks.compileGroovy.onlyIf { false }
 
 publishing {
   publications {
-    MyPublication(MavenPublication) {
+    Smbj(MavenPublication) {
       from components.java
       artifact sourcesJar
       artifact javadocJar
@@ -117,17 +119,21 @@ publishing {
 }
 
 bintray {
+  user = project.property("bintrayUsername")
+  key = project.property("bintrayApiKey")
   publish = true
-  publications = ["MyPublication"]
+  publications = ["Smbj"]
   pkg {
     repo = "maven"
     name = project.name
     licenses = ["Apache-2.0"]
     vcsUrl = "https://github.com/hierynomus/smbj.git"
+    labels = ["smb2", "smb3", "network", "windows", "file-transfer"]
     githubRepo = "hierynomus/smbj"
     version {
-      name = project.version
+      name = project.version.toString()
       vcsTag = "v${project.version}"
+      released = new SimpleDateFormat('yyyy-MM-dd\'T\'HH:mm:ss.SSSZZ').format(new Date())
       gpg {
         sign = true
         passphrase = project.property("signing.password")
