--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ plugins {
   id "com.github.hierynomus.license" version "0.12.1"
   id "com.jfrog.bintray" version "1.7"
   id 'ru.vyarus.pom' version '1.0.2'
+  id 'ru.vyarus.github-info' version '1.1.0'
 }
 
 group = "com.hierynomus"
@@ -35,10 +36,12 @@ dependencies {
 }
 
 license {
+  header rootProject.file('LICENSE_HEADER')
+  strictCheck true
   mapping {
     java = 'SLASHSTAR_STYLE'
   }
-  exclude 'com/hierynomus/protocol/commons/Base64.java'
+  excludes(['com/hierynomus/protocol/commons/Base64.java', '**/*.txt', '**/*.properties'])
 }
 
 release {
@@ -93,29 +96,16 @@ tasks.withType(Test) {
   }
 }
 
-license {
-  header rootProject.file('LICENSE')
-  strictCheck true
-  excludes(['**/*.txt', '**/*.properties'])
-}
-
 project.tasks.compileGroovy.onlyIf { false }
+
+github {
+  user 'hierynomus'
+  license 'Apache'
+}
 
 pom {
   description 'SMB2 protocol library for communication with Windows servers'
   url 'https://github.com/hierynomus/smbj'
-  licenses {
-    license {
-      name "The Apache License, Version 2.0"
-      url "http://www.apache.org/licenses/LICENSE-2.0.txt"
-      distribution 'repo'
-    }
-  }
-  scm {
-    url 'https://github.com/hierynomus/smbj.git'
-    connection 'https://github.com/hierynomus/smbj.git'
-    developerConnection 'git@github.com:hierynomus/smbj.git'
-  }
   developers {
     developer {
       id "hierynomus"
@@ -125,7 +115,12 @@ pom {
         role "Lead developer"
       }
     }
-    developer {
+  }
+}
+
+/*
+  // Awaiting bugfix for pom plugin to add multiple developers (https://github.com/xvik/gradle-pom-plugin/issues/1)
+   developer {
       id "sbellan"
       name "Saravanan Bellan"
       email "sbellan@gmail.com"
@@ -133,8 +128,7 @@ pom {
         role "Developer"
       }
     }
-  }
-}
+*/
 
 
 publishing {
