--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
   testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
   testCompile 'commons-io:commons-io:2.5'
   testRuntime 'ch.qos.logback:logback-classic:1.1.3'
+  testRuntime 'cglib:cglib-nodep:2.2'
 }
 
 license {
