--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ import java.text.SimpleDateFormat
 plugins {
   id "java"
   id "groovy"
+  id "jacoco"
   id "maven-publish"
   id "org.ajoberstar.release-opinion" version "1.4.2"
   id "com.github.hierynomus.license" version "0.12.1"
@@ -14,8 +15,11 @@ plugins {
 group = "com.hierynomus"
 defaultTasks "build"
 
+configurations { codacy }
 repositories {
   mavenCentral()
+  maven { url "https://jitpack.io" }
+  maven { url "http://dl.bintray.com/typesafe/maven-releases" }
 }
 
 sourceCompatibility = 1.7
@@ -33,6 +37,7 @@ dependencies {
   testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
   testCompile 'commons-io:commons-io:2.5'
   testRuntime 'ch.qos.logback:logback-classic:1.1.3'
+  codacy 'com.github.codacy:codacy-coverage-reporter:-SNAPSHOT'
 }
 
 license {
@@ -173,4 +178,16 @@ if (project.hasProperty("bintrayUsername") && project.hasProperty("bintrayApiKey
   }
 }
 
+task sendCoverageToCodacy(type: JavaExec, dependsOn: jacocoTestReport) {
+  main = "com.codacy.CodacyCoverageReporter"
+  classpath = configurations.codacy
+  args = [
+    "-l",
+    "Java",
+    "-r",
+    "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
+  ]
+}
+
 project.tasks.release.dependsOn(project.tasks.bintrayUpload)
+project.tasks.jacocoTestReport.dependsOn(project.tasks.test)
