--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ plugins {
   id "java"
   id "groovy"
   id "jacoco"
+  id "jdepend"
+  id "findbugs"
   id "maven-publish"
   id "org.ajoberstar.release-opinion" version "1.4.2"
   id "com.github.hierynomus.license" version "0.12.1"
@@ -15,7 +17,6 @@ plugins {
 group = "com.hierynomus"
 defaultTasks "build"
 
-configurations { codacy }
 repositories {
   mavenCentral()
   maven { url "https://jitpack.io" }
@@ -37,7 +38,6 @@ dependencies {
   testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
   testCompile 'commons-io:commons-io:2.5'
   testRuntime 'ch.qos.logback:logback-classic:1.1.3'
-  codacy 'com.github.codacy:codacy-coverage-reporter:-SNAPSHOT'
 }
 
 license {
@@ -178,16 +178,43 @@ if (project.hasProperty("bintrayUsername") && project.hasProperty("bintrayApiKey
   }
 }
 
-task sendCoverageToCodacy(type: JavaExec, dependsOn: jacocoTestReport) {
-  main = "com.codacy.CodacyCoverageReporter"
-  classpath = configurations.codacy
-  args = [
-    "-l",
-    "Java",
-    "-r",
-    "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
-  ]
+jdepend {
+   toolVersion = "2.9.1"
+   sourceSets = [sourceSets.main]
+   ignoreFailures = true
 }
+
+jdependMain {
+   reports {
+      xml.enabled true
+      text.enabled false
+   }
+}
+
+task jdependReport(dependsOn: jdependMain, group: 'verification', description: 'Generates a HTML report after executing jdepend checks.') << {
+   ant.xslt(
+      in: "$reporting.baseDir/jdepend/main.xml",
+      style: "$rootDir/conf/jdepend/jdepend-report.xslt",
+      out:"$reporting.baseDir/jdepend/main.html")
+}
+
+tasks.withType(FindBugs) {
+    reports {
+        xml.enabled false
+        html.enabled true
+        // html.stylesheet resources.text.fromFile('config/xsl/color.xsl')
+    }
+}
+
+findbugs {
+  sourceSets = [sourceSets.main]
+  ignoreFailures = true
+}
+
+check {
+   dependsOn += ['jdependReport']
+}
+
 
 project.tasks.release.dependsOn(project.tasks.bintrayUpload)
 project.tasks.jacocoTestReport.dependsOn(project.tasks.test)
