--- a/build.gradle
+++ b/build.gradle
@@ -87,7 +87,7 @@ sourceSets {
 }
 
 task integrationTest(type: Test) {
-  testClassesDir = sourceSets.integrationTest.output.classesDir
+  testClassesDirs = sourceSets.integrationTest.output.classesDirs
   classpath = sourceSets.integrationTest.runtimeClasspath
 }
 
