--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
   compile 'net.engio:mbassador:1.3.0'
   testCompile 'org.codehaus.groovy:groovy-all:2.4.4'
   testRuntime 'cglib:cglib-nodep:2.2'
+  testRuntime 'org.objenesis:objenesis:2.6'
   testCompile 'org.spockframework:spock-core:1.1-groovy-2.4'
   testCompile 'commons-io:commons-io:2.5'
   testRuntime 'ch.qos.logback:logback-classic:1.2.3'
