--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,23 @@
 language: java
+dist: trusty
+sudo: false
+
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+
 cache:
   directories:
   - $HOME/.gradle/caches/
   - $HOME/.gradle/wrapper/
+
 jdk:
   - oraclejdk8
   - openjdk8
   - oraclejdk9
-sudo: false
-dist: trusty
+
+
+before_install:
+  - pip install --user codecov
+
+after_success:
+- codecov
