--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@ import java.text.SimpleDateFormat
 
 plugins {
   id "java"
-  id "idea"
   id "groovy"
   id "jacoco"
   id "jdepend"
@@ -10,9 +9,10 @@ plugins {
   id 'pl.allegro.tech.build.axion-release' version '1.8.1'
   id "com.github.hierynomus.license" version "0.12.1"
   id "com.jfrog.bintray" version "1.7"
-  id 'ru.vyarus.pom' version '1.0.3'
+  id 'ru.vyarus.java-lib' version '1.0.5'
   id 'ru.vyarus.github-info' version '1.1.0'
   id 'ru.vyarus.animalsniffer' version '1.4.2'
+  id "idea"
 }
 
 group = "com.hierynomus"
@@ -72,16 +72,6 @@ if (JavaVersion.current().isJava8Compatible()) {
   tasks.withType(Javadoc) {
     options.addStringOption('Xdoclint:none', '-quiet')
   }
-}
-
-task sourcesJar(type: Jar) {
-  from sourceSets.main.allSource
-  classifier = 'sources'
-}
-
-task javadocJar(type: Jar, dependsOn: javadoc) {
-  classifier = 'javadoc'
-  from javadoc.destinationDir
 }
 
 configurations {
@@ -165,22 +155,12 @@ pom {
   }
 }
 
-publishing {
-  publications {
-    Smbj(MavenPublication) {
-      from components.java
-      artifact sourcesJar
-      artifact javadocJar
-    }
-  }
-}
-
 if (project.hasProperty("bintrayUsername") && project.hasProperty("bintrayApiKey")) {
   bintray {
     user = project.property("bintrayUsername")
     key = project.property("bintrayApiKey")
     publish = true
-    publications = ["Smbj"]
+    publications = ["maven"]
     pkg {
       repo = "maven"
       name = project.name
