--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -3,6 +3,6 @@
           android:versionCode="1"
           android:versionName="1.0" >
     <uses-sdk
-            android:minSdkVersion="24"
-            android:targetSdkVersion="24" />
+            android:minSdkVersion="${minSdkVersion}"
+            android:targetSdkVersion="${targetSdkVersion}" />
 </manifest>
