Add check task also to oraclejdk8

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ matrix:
       after_success:
         - codecov
       script:
+        - ./gradlew check
         - ./gradlew sonarqube
     - language: java
       jdk: openjdk8
