--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,4 @@ MBASSADOR=net.engio:mbassador:1.3.0
 OBJENESIS=org.objenesis:objenesis:2.6
 SLF4J_API=org.slf4j:slf4j-api:1.7.25
 SPOCK_CORE=org.spockframework:spock-core:1.1-groovy-2.4
+ASN_ONE=com.hierynomus:asn-one:0.4.0
