--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,28 +28,14 @@ jobs:
         restore-keys: ${{ runner.os }}-gradle
     - name: Build with Gradle
       run: ./gradlew check
-  # java10:
-  #   name: Build with Java 10
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #   - name: Set up JDK 10
-  #     uses: actions/setup-java@v1
-  #     with:
-  #       java-version: 10
-  #   - name: Grant execute permission for gradlew
-  #     run: chmod +x gradlew
-  #   - name: Build with Gradle
-  #     run: ./gradlew check -xanimalsnifferMain -xanimalsnifferTest
-
   integration:
     name: Integration test
     needs: [java1`1]
     runs-on: [ubuntu-latest]
     steps:
     - uses: actions/checkout@v2
-      - run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
-    - uses: actions/setup-java@v1
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
       with:
         java-version: 11
     - name: Cache Gradle packages
