--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,10 @@ plugins {
   id "groovy"
   id "jacoco"
   id "maven-publish"
-  id 'pl.allegro.tech.build.axion-release' version '1.10.1'
+  id 'pl.allegro.tech.build.axion-release' version '1.11.0'
   id "com.github.hierynomus.license" version "0.15.0"
-  id "com.bmuschko.docker-remote-api" version "5.2.0"
-  id "com.jfrog.bintray" version "1.8.4"
+  id "com.bmuschko.docker-remote-api" version "6.4.0"
+  id "com.jfrog.bintray" version "1.8.5"
   id 'ru.vyarus.java-lib' version '1.1.2'
   id 'ru.vyarus.github-info' version '1.1.0'
   id 'ru.vyarus.animalsniffer' version '1.5.0'
@@ -212,24 +212,26 @@ sonarqube {
   }
 }
 
+
 task buildItestImage(type: DockerBuildImage) {
-  inputDir = file('src/it/docker-image')
-  tags = ['smbj/smbj-itest']
+    inputDir = file('src/it/docker-image')
+    images.add('smbj/smbj-itest:latest')
 }
 
 task createItestContainer(type: DockerCreateContainer) {
-  dependsOn buildItestImage
-  targetImageId buildItestImage.getImageId()
-  portBindings = ['445:445']
+    dependsOn buildItestImage
+    targetImageId buildItestImage.getImageId()
+    hostConfig.portBindings = ['445:445']
+    hostConfig.autoRemove = true
 }
 
 task startItestContainer(type: DockerStartContainer) {
-  dependsOn createItestContainer
-  targetContainerId createItestContainer.getContainerId()
+    dependsOn createItestContainer
+    targetContainerId createItestContainer.getContainerId()
 }
 
 task stopItestContainer(type: DockerStopContainer) {
-  targetContainerId createItestContainer.getContainerId()
+    targetContainerId createItestContainer.getContainerId()
 }
 
 project.tasks.integrationTest.dependsOn(startItestContainer)
