--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 BCPROV_JDK15ON=org.bouncycastle:bcprov-jdk15on:1.60
 CGLIB_NODEP=cglib:cglib-nodep:2.2
 COMMONS_IO=commons-io:commons-io:2.5
-GROOVY_ALL=org.codehaus.groovy:groovy-all:2.4.4
+GROOVY_ALL=org.codehaus.groovy:groovy-all:2.5.12
 LOGBACK_CLASSIC=ch.qos.logback:logback-classic:1.2.3
 MBASSADOR=net.engio:mbassador:1.3.0
 OBJENESIS=org.objenesis:objenesis:2.6
 SLF4J_API=org.slf4j:slf4j-api:1.7.25
-SPOCK_CORE=org.spockframework:spock-core:1.1-groovy-2.4
+SPOCK_CORE=org.spockframework:spock-core:2.0-M4-groovy-2.5
 ASN_ONE=com.hierynomus:asn-one:0.4.0
