--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ defaultTasks "build"
 repositories {
   mavenCentral()
   maven { url "https://jitpack.io" }
-  maven { url "http://dl.bintray.com/typesafe/maven-releases" }
+  maven { url "http://dl.bintray.com/hierynomus/maven" }
 }
 
 sourceCompatibility = 1.7
