--- a/build.gradle
+++ b/build.gradle
@@ -8,14 +8,12 @@ plugins {
   id "jacoco"
   id "maven-publish"
   id "signing"
-  id 'pl.allegro.tech.build.axion-release' version '1.13.3'
+  id 'pl.allegro.tech.build.axion-release' version '1.14.4'
   id "com.github.hierynomus.license" version "0.16.1"
-  id "com.bmuschko.docker-remote-api" version "7.1.0"
+  id "com.bmuschko.docker-remote-api" version "9.2.1"
   // id 'ru.vyarus.java-lib' version '2.1.0'
-  id 'ru.vyarus.github-info' version '1.2.0'
-  id 'ru.vyarus.animalsniffer' version '1.5.3'
-  id 'org.sonarqube' version "2.7"
-  id "io.github.gradle-nexus.publish-plugin" version "1.0.0"
+  id 'ru.vyarus.github-info' version '1.5.0'
+  id "io.github.gradle-nexus.publish-plugin" version "1.3.0"
 }
 
 group = "com.hierynomus"
@@ -41,13 +39,13 @@ scmVersion {
 
 project.version = scmVersion.version
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+compileJava {
+  options.release = 8
+}
 
 configurations.implementation.transitive = false
 
 dependencies {
-  signature 'org.codehaus.mojo.signature:java17:1.0@signature'
 
   implementation SLF4J_API
   implementation BCPROV_JDK15ON
@@ -204,29 +202,12 @@ nexusPublishing {
 	clientTimeout = Duration.ofMinutes(3)
 }
 
-// java.lang.invoke.MethodHandle.invokeExact(Object[]) has a @PolymorphicSignature
-// (see https://github.com/mojohaus/animal-sniffer/issues/18),
-// so we ignore them from the sniffer
-animalsniffer {
-  ignore 'java.lang.invoke.MethodHandle'
-}
-
 jacocoTestReport {
     reports {
-        xml.enabled true
-        html.enabled true
+        xml.required = true
+        html.required = true
     }
 }
-
-sonarqube {
-  properties {
-    property "sonar.host.url", "https://sonarcloud.io"
-    property "sonar.organization", "hierynomus-github"
-    property "sonar.projectKey", "com.hierynomus:smbj"
-    // property "sonar.login", project.property('sonar.login')
-  }
-}
-
 
 task buildItestImage(type: DockerBuildImage) {
   inputDir = file('src/it/docker-image')
