--- a/src/it/docker-image/smb.conf
+++ b/src/it/docker-image/smb.conf
@@ -1,5 +1,8 @@
 [global]
 security = user
+log level = 5
+log file = /var/log/samba/smbd.log
+max log size = 10000
 
 load printers = no
 printcap name = /dev/null
@@ -14,9 +17,6 @@ server string = %h server (Samba, Ubuntu)
 dns proxy = no
 interfaces = 192.168.2.0/24 eth0
 bind interfaces only = yes
-log file = /var/log/samba/log.%m
-max log size = 1000
-syslog = 0
 panic action = /usr/share/samba/panic-action %d
 server role = standalone server
 passdb backend = tdbsam
