Implement message integrity (ntlmssp_mic and mechListMic)

--- a/src/it/docker-image/supervisord.conf
+++ b/src/it/docker-image/supervisord.conf
@@ -5,10 +5,10 @@ loglevel=info
 
 [program:smbd]
 /* command=/usr/sbin/smbd -i --daemon --foreground --log-stdout */
-command=/usr/sbin/smbd --daemon --foreground --log-stdout
-redirect_stderr=true
+command=/usr/sbin/smbd --daemon --foreground --configfile=/etc/samba/smb.conf
+/*redirect_stderr=true*/
 
 [program:nmbd]
 /* command=/usr/sbin/nmbd -i --daemon --foreground --log-stdout */
-command=/usr/sbin/nmbd --daemon --foreground --log-stdout
-redirect_stderr=true
+command=/usr/sbin/nmbd --daemon --foreground
+/*redirect_stderr=true*/
