--- a/src/it/docker-image/smb.conf
+++ b/src/it/docker-image/smb.conf
@@ -14,10 +14,10 @@ server string = %h server (Samba, Ubuntu)
 dns proxy = no
 interfaces = 192.168.2.0/24 eth0
 bind interfaces only = yes
-log level = 5
-log file = /var/log/samba/log.%m
-max log size = 1000
-syslog = 0
+log level = 5 auth:10
+log file = /var/log/samba.log
+max log size = 20480
+syslog = 1
 panic action = /usr/share/samba/panic-action %d
 server role = standalone server
 passdb backend = tdbsam
