--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ import java.text.SimpleDateFormat
 
 plugins {
   id "java"
+  id "jvm-test-suite"
   id "groovy"
   id "jacoco"
   id "maven-publish"
@@ -46,25 +47,10 @@ compileJava {
 configurations.implementation.transitive = false
 
 dependencies {
-
   implementation SLF4J_API
   implementation BCPROV_JDK15ON
   implementation MBASSADOR
   implementation ASN_ONE
-  testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.0")
-  testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.7.0")
-  testImplementation("org.junit.jupiter:junit-jupiter-params:5.7.0")
-
-  testImplementation GROOVY_ALL
-  testRuntimeOnly CGLIB_NODEP
-  testRuntimeOnly OBJENESIS
-  testImplementation SPOCK_CORE
-  testImplementation COMMONS_IO
-  testRuntimeOnly LOGBACK_CLASSIC
-}
-
-tasks.withType(Test) {
-  useJUnitPlatform()
 }
 
 license {
@@ -99,39 +85,71 @@ if (JavaVersion.current().isJava8Compatible()) {
   }
 }
 
-configurations {
-  integrationTestImplementation.extendsFrom testImplementation
-  integrationTestRuntime.extendsFrom testRuntime
-}
+testing {
+  suites {
+    configureEach {
+      useJUnitJupiter()
+      dependencies {
+        implementation SLF4J_API
+        implementation GROOVY_ALL
+        runtimeOnly CGLIB_NODEP
+        runtimeOnly OBJENESIS
+        implementation SPOCK_CORE
+        implementation COMMONS_IO
+        runtimeOnly LOGBACK_CLASSIC
+      }
 
-sourceSets {
-  integrationTest {
-    groovy {
-      compileClasspath += sourceSets.main.output + sourceSets.test.output
-      runtimeClasspath += sourceSets.main.output + sourceSets.test.output
-      srcDir file('src/it/groovy')
+      targets {
+        all {
+          testTask.configure {
+            testLogging {
+              exceptionFormat = 'full'
+            }
+            include "**/*Test.*"
+            include "**/*Spec.*"
+            afterSuite { descriptor, result ->
+              def indicator = "\u001B[32m✓\u001b[0m"
+              if (result.failedTestCount > 0) {
+                indicator = "\u001B[31m✘\u001b[0m"
+              }
+              logger.lifecycle("$indicator Test ${descriptor.name}; Executed: ${result.testCount}/\u001B[32m${result.successfulTestCount}\u001B[0m/\u001B[31m${result.failedTestCount}\u001B[0m")
+            }
+          }
+        }
+      }
     }
-    resources.srcDir file('src/it/resources')
-  }
-}
 
-task integrationTest(type: Test) {
-  testClassesDirs = sourceSets.integrationTest.output.classesDirs
-  classpath = sourceSets.integrationTest.runtimeClasspath
-}
-
-tasks.withType(Test) {
-  testLogging {
-    exceptionFormat = 'full'
-  }
-  include "**/*Test.*"
-  include "**/*Spec.*"
-  afterSuite { descriptor, result ->
-    def indicator = "\u001B[32m✓\u001b[0m"
-    if (result.failedTestCount > 0) {
-      indicator = "\u001B[31m✘\u001b[0m"
+    test {
+      sources {
+        groovy {
+          srcDirs = ['src/test/groovy']
+        }
+      }
     }
-    logger.lifecycle("$indicator Test ${descriptor.name}; Executed: ${result.testCount}/\u001B[32m${result.successfulTestCount}\u001B[0m/\u001B[31m${result.failedTestCount}\u001B[0m")
+
+    integrationTest(JvmTestSuite) {
+      dependencies {
+        implementation project()
+      }
+
+      sources {
+        groovy {
+          srcDirs = ['src/it/groovy']
+        }
+
+        resources {
+          srcDirs = ['src/it/resources']
+        }
+      }
+
+      targets {
+        all {
+          testTask.configure {
+            shouldRunAfter(test)
+          }
+        }
+      }
+    }
   }
 }
 
@@ -235,13 +253,7 @@ task stopItestContainer(type: DockerStopContainer) {
 project.tasks.integrationTest.dependsOn(startItestContainer)
 project.tasks.integrationTest.finalizedBy(stopItestContainer)
 
-task forkedUploadRelease(type: GradleBuild) {
-  buildFile = project.buildFile
-  tasks = ["clean", "publishToSonatype", "closeAndReleaseSonatypeStagingRepository"]
-}
-
 project.tasks.release.dependsOn([project.tasks.integrationTest, project.tasks.build])
-project.tasks.release.finalizedBy(project.tasks.forkedUploadRelease)
 
 project.tasks.jacocoTestReport.dependsOn(project.tasks.test)
 project.tasks.check.dependsOn(project.tasks.jacocoTestReport)
