--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,9 @@
-BCPROV_JDK15ON=org.bouncycastle:bcprov-jdk15on:1.70
-CGLIB_NODEP=cglib:cglib-nodep:2.2
-COMMONS_IO=commons-io:commons-io:2.5
-GROOVY_ALL=org.codehaus.groovy:groovy-all:2.5.12
-LOGBACK_CLASSIC=ch.qos.logback:logback-classic:1.2.9
+BCPROV_JDK15ON=org.bouncycastle:bcprov-jdk18on:1.75
+CGLIB_NODEP=cglib:cglib-nodep:3.3.0
+COMMONS_IO=commons-io:commons-io:2.13.0
+LOGBACK_CLASSIC=ch.qos.logback:logback-classic:1.3.8
 MBASSADOR=net.engio:mbassador:1.3.0
-OBJENESIS=org.objenesis:objenesis:2.6
-SLF4J_API=org.slf4j:slf4j-api:1.7.32
-SPOCK_CORE=org.spockframework:spock-core:2.0-M4-groovy-2.5
+OBJENESIS=org.objenesis:objenesis:3.3
+SLF4J_API=org.slf4j:slf4j-api:2.0.7
+SPOCK_CORE=org.spockframework:spock-core:2.3-groovy-3.0
 ASN_ONE=com.hierynomus:asn-one:0.6.0
