Fixed error with anonymous authentication (Fixes #779)

--- a/build.gradle
+++ b/build.gradle
@@ -133,6 +133,9 @@ testing {
       }
 
       sources {
+        java {
+          srcDirs = ['src/it/java']
+        }
         groovy {
           srcDirs = ['src/it/groovy']
         }
